# cadru

./: .gitignore  README.md  cadru.opam  dune  dune-project
assets/: haskell.yaml  python.yaml
dev-tools.locks/ocaml-lsp-server/: lock.dune
lib/: commandLineOptions.ml  compiled.ml  config.ml  dune  interface.ml  interpreted.ml  judge.ml  judge_sig.ml  runner.ml  session.ml  utils.ml
lib/judge/: dune  judge.mli
test/: dune
